--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "filepond-plugin-image-resize": "^2.0.10",
     "filepond-plugin-image-transform": "^3.8.7",
     "firebase": "^12.2.1",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
+    "motion": "^12.23.12",
     "next-themes": "^0.4.6",
     "pintura": "^0.3.10",
     "react": "^19.0.0",
